--- a/Blog/C1.2_ActaConstitutivaDelProyecto_VillegasRamirezLuisEduardo.md
+++ b/Blog/C1.2_ActaConstitutivaDelProyecto_VillegasRamirezLuisEduardo.md
@@ -53,17 +53,17 @@ ___
 
 | Propósito / Justificación |
 | ------------------------- |
-| Se busca ampliar el campo de trabajo de la empresa con una plataforma en línea para brindar cursos y certificaciones, este proyecto analizará resultados de la recolección de información para proveer un producto que cumpla con las características deseadas. |
+| Crear un mayor desempeño competitivo tanto de la empresa como de cada uno de los empleados que estén capacitados con el materia ofrecido en la plataforma que contrendra distintos cursos a fin. |
 
 
 | Breve Descripción del Proyecto |
 | ------------------------------ |
-| Una plataforma en línea que permita a empleados de cierta empresa seleccionar, realizar, aprobar y certificarse en distintos cursos que avalen sus conocimientos, todo esto bajo el control de un administrador o coordinador. |
+| Crear un sitio web que permita registrar empleados y cursos para capacitar a los empleados quienes podran completar cursos y certificaciones para posteriormente ser evaluados y obtener diplomas o reconocimientos en caso de obtener una calificacion aprobatoria. |
 
 
 | Alcance Preliminar del Proyecto |
 | ------------------------------- |
-| Empleados de cierta empresa, de tal forma que sean capaces de adquirir, reforzar y respaldar los conocimientos necesarios para su rol dentro de la misma. |
+| Personal de una empresa que decee obtener crertificaciones en los cursos ofrecidos. |
 
 
 | Resultados Esperados del Proyecto / Beneficios |
@@ -75,33 +75,32 @@ ___
 | Requisitos de Alto Nivel del Proyecto |   |
 | ------------------------------------- | - |
 | *Requisito* | *Criterio de Éxito* |
-| Ofrecer a los usuarios una plataforma que esté disponible en todo momento, que sea fácil de utilizar y atractiva, así como garantice seguridad de la información que ahí se registre. | Contar con un inicio de sesión que utilice información que solo el empleados y el administrador conozca, además de hacer uso de una interfaz que pueda llegar a ser intuitiva. |
-| Ofrecer a los usuarios inscribirse a un cualquier curso a través de un catalogo, y/o un mapa de ruta de cursos basado en un perfil establecido. | Mostrar al usuario un catálogo de los cursos basados en su rol o nivel de jerarquía dentro de la empresa, es decir los conocimientos que debe cursar. |
-| Permitir que los cursos que se publiquen y ofrezcan puedan ser creados utilizando distintos formatos tales como son videos o presentaciones, y separadas por tópicos con un limite máximo de tamaño y duración. | Lograr que al hacer uso de estos materiales los cursos presentados sean más dinámicos o sirvan de apoyo para el comprendimiento de las habilidades que deben adquirirse. |
-| Ofrecer al usuario los avances logrados por cada curso, y al ser completado a través de una evaluación exitosa, otorgue un comprobando de certificación. | Presentar al usuario el estatus en el que se encuentran sus cursos, y que cuente con los certificados de aquellos cursos que aprobó satisfactoriamente. |
+| Crear una plataforma segura tanto para la empresa como para los usuarios. | Implementar un inicio de sesion para garantizar la seguridad del perfil del usuario. |
+| Presentar a los usuarios los cursos y certificaciones disponibles. | Crear un catalogo que sea visualmente agradable, con una interfaz amigable y práctica. |
+| Visualizar el progreso que tiene el usuario. | Presentar vistas previas con el porcentaje de avance que podrá ser visualizada tanto por el usuario como por los evaluadores. |
+| Generar certificados y diplomas para los usuaros que obtengan calificaciones aprobatirias. | Entregar la calificacion final al usuario con la posibilidad de obtener su certificación. |
 | Ofrecer analítica de datos sobre los cursos que son más solicitados, los cursos a los cuales los usuarios se enrolaron y completaron, así como los usuarios a los cuales su certificación esta por expirar o expiro. | Hacer uso de recursos gráficos para que el administrador pueda analizar la información referente a los estados de los usuarios en cuanto a los cursos. |
 
 ___
 
 | Hitos | Tiempos
 | ----- | -------  |
-| Definición y análisis de requerimientos | Una semana |
-| Diseño y modelado del sistema | Dos semanas |
-| Mockups y definición de módulos | Una semana |
-| Desarrollo del sistema | Dos a tres meses |
-| Pruebas finales | Una semana |
+| Obtención de requerimientos | 5 Días |
+| Diseño del sistema | 10 Días |
+| Mockups | 5 Días |
+| Desarrollo del sistema | 30 Días |
+| Pruebas finales | 7 Días |
 | Entrega | *DD/MM/AA* |
 
 | Riesgos |
 | ------- |
-| Falta de miembros de equipo para trabajar en las actividades. |
-| Atraso en los tiempos definidos en el cronograma. |
-| Redefinición de requerimientos. |
-| Problemas con algún módulo de codificación. |
+| Disposicion del personal definido para el proyecto. |
+| Prolongacion en el tiempo establecido para cada etapa. |
+| Peticiones de último momento. |
 
 | Costo Preliminar Estimado / Presupuesto |
 | ----- |
-| En base a la cantidad de horas-esfuerzo esperadas por recursos humanos, horas-uso de los recursos materiales e inconvenientes que puedan surgir, se visualiza un presupuesto estimado de $50,000 MXN. |
+|  $300,000 MXN. |
 
 ___
 
